make component use less foot prints and be cached.

--- a/Project/Windows/Dorothy/Dorothy.vcxproj
+++ b/Project/Windows/Dorothy/Dorothy.vcxproj
@@ -481,6 +481,7 @@
     <ClInclude Include="..\..\..\Source\Const\XmlTag.h" />
     <ClInclude Include="..\..\..\Source\Dorothy.h" />
     <ClInclude Include="..\..\..\Source\Effect\Effect.h" />
+    <ClInclude Include="..\..\..\Source\Entity\Component.h" />
     <ClInclude Include="..\..\..\Source\Entity\Entity.h" />
     <ClInclude Include="..\..\..\Source\Event\Event.h" />
     <ClInclude Include="..\..\..\Source\Event\EventQueue.h" />
