--- a/Project/Windows/Dorothy/Dorothy.vcxproj.filters
+++ b/Project/Windows/Dorothy/Dorothy.vcxproj.filters
@@ -528,6 +528,12 @@
     <ClCompile Include="..\..\..\Source\Shader\Builtin.cpp">
       <Filter>Shader</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\Source\Entity\Component.cpp">
+      <Filter>Entity</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Common\MemoryPool.cpp">
+      <Filter>Common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Source\3rdParty\FileSystem\mkdir.h">
