add platformer game functions.

--- a/Project/Windows/Dorothy/Dorothy.vcxproj
+++ b/Project/Windows/Dorothy/Dorothy.vcxproj
@@ -352,6 +352,20 @@
     <ClCompile Include="..\..\..\Source\Physics\JointDef.cpp" />
     <ClCompile Include="..\..\..\Source\Physics\Sensor.cpp" />
     <ClCompile Include="..\..\..\Source\Physics\World.cpp" />
+    <ClCompile Include="..\..\..\Source\Platformer\AI.cpp" />
+    <ClCompile Include="..\..\..\Source\Platformer\AINode.cpp" />
+    <ClCompile Include="..\..\..\Source\Platformer\Bullet.cpp" />
+    <ClCompile Include="..\..\..\Source\Platformer\BulletDef.cpp" />
+    <ClCompile Include="..\..\..\Source\Platformer\Data.cpp" />
+    <ClCompile Include="..\..\..\Source\Platformer\Define.cpp" />
+    <ClCompile Include="..\..\..\Source\Platformer\Face.cpp" />
+    <ClCompile Include="..\..\..\Source\Platformer\PlatformCamera.cpp" />
+    <ClCompile Include="..\..\..\Source\Platformer\PlatformWorld.cpp" />
+    <ClCompile Include="..\..\..\Source\Platformer\Property.cpp" />
+    <ClCompile Include="..\..\..\Source\Platformer\Unit.cpp" />
+    <ClCompile Include="..\..\..\Source\Platformer\UnitAction.cpp" />
+    <ClCompile Include="..\..\..\Source\Platformer\UnitDef.cpp" />
+    <ClCompile Include="..\..\..\Source\Platformer\VisualCache.cpp" />
     <ClCompile Include="..\..\..\Source\Shader\Builtin.cpp" />
     <ClCompile Include="..\..\..\Source\Support\Array.cpp" />
     <ClCompile Include="..\..\..\Source\Support\Common.cpp" />
@@ -515,6 +529,20 @@
     <ClInclude Include="..\..\..\Source\Physics\JointDef.h" />
     <ClInclude Include="..\..\..\Source\Physics\Sensor.h" />
     <ClInclude Include="..\..\..\Source\Physics\World.h" />
+    <ClInclude Include="..\..\..\Source\Platformer\AI.h" />
+    <ClInclude Include="..\..\..\Source\Platformer\AINode.h" />
+    <ClInclude Include="..\..\..\Source\Platformer\Bullet.h" />
+    <ClInclude Include="..\..\..\Source\Platformer\BulletDef.h" />
+    <ClInclude Include="..\..\..\Source\Platformer\Data.h" />
+    <ClInclude Include="..\..\..\Source\Platformer\Define.h" />
+    <ClInclude Include="..\..\..\Source\Platformer\Face.h" />
+    <ClInclude Include="..\..\..\Source\Platformer\PlatformCamera.h" />
+    <ClInclude Include="..\..\..\Source\Platformer\PlatformWorld.h" />
+    <ClInclude Include="..\..\..\Source\Platformer\Property.h" />
+    <ClInclude Include="..\..\..\Source\Platformer\Unit.h" />
+    <ClInclude Include="..\..\..\Source\Platformer\UnitAction.h" />
+    <ClInclude Include="..\..\..\Source\Platformer\UnitDef.h" />
+    <ClInclude Include="..\..\..\Source\Platformer\VisualCache.h" />
     <ClInclude Include="..\..\..\Source\Shader\Builtin.h" />
     <ClInclude Include="..\..\..\Source\Support\Array.h" />
     <ClInclude Include="..\..\..\Source\Support\Common.h" />
