--- a/Project/Windows/Dorothy/Dorothy.vcxproj.filters
+++ b/Project/Windows/Dorothy/Dorothy.vcxproj.filters
@@ -118,6 +118,9 @@
     <Filter Include="Shader">
       <UniqueIdentifier>{f8799809-de75-4622-bdcb-2387ebc5ee83}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Platformer">
+      <UniqueIdentifier>{45f95e66-5643-4ac5-92c1-8660357c90ff}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Source\3rdParty\Zip\Support\ioapi.cpp">
@@ -533,6 +536,48 @@
     </ClCompile>
     <ClCompile Include="..\..\..\Source\Common\MemoryPool.cpp">
       <Filter>Common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Platformer\AI.cpp">
+      <Filter>Platformer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Platformer\AINode.cpp">
+      <Filter>Platformer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Platformer\Bullet.cpp">
+      <Filter>Platformer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Platformer\BulletDef.cpp">
+      <Filter>Platformer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Platformer\Data.cpp">
+      <Filter>Platformer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Platformer\Define.cpp">
+      <Filter>Platformer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Platformer\Face.cpp">
+      <Filter>Platformer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Platformer\PlatformCamera.cpp">
+      <Filter>Platformer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Platformer\PlatformWorld.cpp">
+      <Filter>Platformer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Platformer\Property.cpp">
+      <Filter>Platformer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Platformer\Unit.cpp">
+      <Filter>Platformer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Platformer\UnitAction.cpp">
+      <Filter>Platformer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Platformer\UnitDef.cpp">
+      <Filter>Platformer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Platformer\VisualCache.cpp">
+      <Filter>Platformer</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1016,6 +1061,48 @@
     </ClInclude>
     <ClInclude Include="..\..\..\Source\Entity\Component.h">
       <Filter>Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Platformer\AI.h">
+      <Filter>Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Platformer\AINode.h">
+      <Filter>Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Platformer\Bullet.h">
+      <Filter>Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Platformer\BulletDef.h">
+      <Filter>Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Platformer\Data.h">
+      <Filter>Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Platformer\Define.h">
+      <Filter>Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Platformer\Face.h">
+      <Filter>Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Platformer\PlatformCamera.h">
+      <Filter>Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Platformer\PlatformWorld.h">
+      <Filter>Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Platformer\Property.h">
+      <Filter>Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Platformer\Unit.h">
+      <Filter>Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Platformer\UnitAction.h">
+      <Filter>Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Platformer\UnitDef.h">
+      <Filter>Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Platformer\VisualCache.h">
+      <Filter>Platformer</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
