--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ matrix:
     components:
       - tools
       - platform-tools
+      - build-tools-29.0.1
+      - android-26
       - extra-google-m2repository
       - extra-android-m2repository
     addons:
