--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
     android:
     components:
       - tools
-      - platform-tools
+      - platform-tools-29.0.1
       - build-tools-29.0.1
       - android-26
       - extra-google-m2repository
