--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,7 @@ matrix:
     android:
     components:
       - tools
-      - platform-tools-29.0.1
-      - build-tools-29.0.1
-      - android-26
+      - platform-tools
       - extra-google-m2repository
       - extra-android-m2repository
     addons:
@@ -31,9 +29,11 @@ matrix:
       - cd ./Tools/tolua++
       - lua tolua++.lua
     install:
-      - echo y | sdkmanager "ndk-bundle"
-      - echo y | sdkmanager "cmake;3.6.4111459"
-      - echo y | sdkmanager "lldb;3.1"
+      - yes | sdkmanager "platforms;android-26"
+      - yes | sdkmanager "build-tools;29.0.1"
+      - yes | sdkmanager "ndk-bundle"
+      - yes | sdkmanager "cmake;3.6.4111459"
+      - yes | sdkmanager "lldb;3.1"
     before_script:
       - export ANDROID_NDK_HOME=$ANDROID_HOME/ndk-bundle
     script:
