--- a/Project/Android/app/build.gradle
+++ b/Project/Android/app/build.gradle
@@ -12,7 +12,7 @@ android {
 		externalNativeBuild {
 			cmake {
 				arguments "-DANDROID_STL=c++_static", "-DANDROID_ARM_NEON=TRUE"
-				abiFilters "armeabi-v7a", "x86"
+				abiFilters "armeabi-v7a", "x86", "arm64-v8a"
 				cppFlags "-std=c++17", "-frtti", "-fexceptions"
 			}
 		}
